# kmeans.hs

./: README.md  Setup.hs  kmeans-hs.cabal
kmeans-hs/: KMeans.hs  Main.hs
